Deploy_k8s/1/2-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-django
  namespace: default
spec:
  selector:
    app: django-deployment
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
